--- a/.github/workflows/update_README.yml
+++ b/.github/workflows/update_README.yml
@@ -11,8 +11,12 @@ jobs:
     name: Update Profile README
     steps:
       - uses: actions/checkout@v2.3.4
+
+      
       - uses: Readme-Workflows/recent-activity@v2.4.1
-      - env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
 name: Update README
 
@@ -38,6 +42,6 @@ jobs:
 
 &#x20;     \- uses: Readme-Workflows/recent-activity@v2.4.1
 
-&#x20;     \- env:
+&#x20;     \ env:
 
 &#x20;         GITHUB\_TOKEN: ${{ secrets.GITHUB\_TOKEN }}
